footer: quick minimum spacing fix

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -84,6 +84,10 @@
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-around;
+
+      > span {
+        margin: 0 0.5rem;
+      }
     }
   }
 }
